<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TiXing</string>
    <string name="dummy_content">DUMMY</string>
    <string name="copyright">Coptyright©（2017）</string>
    <string name="company_name">北京厚德天赢科技有限公司</string>
    <string name="action_name_case">Cases</string>
    <string name="action_name_search">Search</string>
    <string name="action_name_settings">Settigns</string>
    <string name="action_name_gallery">Gallery</string>
    <string name="title_activity_settings">Settings</string>
    <string name="init_error">initialize app on startup failed</string>
    <string name="action_create">Create</string>
    <string name="action_create_new_case_i">Create new Case</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_case_i">Delete selected case</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_case_i">Modify info of selected case.</string>
    <string name="action_replace_photo">Replace</string>
    <string name="action_replace_photo_i">Replace current photo</string>
    <string name="format_image_count" formatted="false">%s (%d photos)</string>
    <string name="info_bath_delete_case_failed">Delete selected case(s) failed.</string>
    <string name="info_insert_case_failed">Save the new case info failed.</string>
    <string name="info_delete_case_failed">Delete the case failed.</string>
    <string name="info_update_case_failed">Save the modified case failed.</string>
    <string name="info_save_photo_taked_failed">Save the photo tacked failed.</string>
    <string name="action_take_photo">Take</string>
    <string name="action_take_photo_i">Take a photo from camera</string>
    <string name="action_compare_split">Compare</string>
    <string name="action_compare_split_i">compare by left to right</string>
    <string name="action_compare_stackup">Compare</string>
    <string name="action_compare_stackup_i">compare by stackup</string>
    <string name="action_edit_photo_i">corp, rote, comment(etc.) the selected photo</string>
    <string name="action_delete_photo_i">delete selected photos</string>
    <string name="action_export">Export</string>
    <string name="action_export_case_i">Export photos related the current case</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">Ok</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="message_request_to_compared">Please choose two photo for compared.</string>
    <string name="message_request_to_deleted">Please choose photos to deleted.</string>
    <string name="message_request_to_exported">Please choose photos to exported.</string>
    <string name="message_if_delete_case">Ensure to delete the case and all related photos?</string>
    <string name="label_case_name">Case Name</string>
    <string name="label_user_name">Operator</string>
    <string name="label_case_comment">Description</string>
    <string name="label_select_all">All</string>
    <string name="info_operator_empty">The operator user name is not allowed empty.</string>
    <string name="info_case_name_empty">The case name is not allowed empty</string>
    <string name="info_case_name_aready_exists">The case name is aready exists.</string>
    <string name="label_start_date">Begin Time</string>
    <string name="label_end_date">End Time</string>
    <string name="system_dialog_title">系统提示</string>
    <string-array name="message_box_buttons_ok">
        <item>Ok</item>
    </string-array>
    <string-array name="message_box_buttons_ok_cancel">
        <item>Ok</item>
        <item>Cancel</item>
    </string-array>
    <string-array name="message_box_buttons_yes_no">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="message_box_buttons_yea_no_cancel">
        <item>Yes</item>
        <item>No</item>
        <item>Cancel</item>
    </string-array>
    <string name="title_activity_image_fullscreen_view">ImageFullscreenViewActivity</string>
    <string name="title_activity_case_content">CaseContentActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_new_case">NewCaseActivity</string>
    <string name="action_image_from_camera">拍照</string>
    <string name="action_image_from_video">摄像头</string>
    <string name="action_connect_camera_ap">连接摄像头</string>
    <string name="l_dev_type">Type:</string>
    <string name="l_dev_mac">MAC:</string>
    <string name="l_dev_sn">Serial No:</string>
    <string name="l_dev_ip">IP:</string>
    <string name="l_dev_status">Status:</string>
    <string name="txt_btn_connect_dev">connect</string>
    <string name="txt_btn_disconnect_dev">disconnect</string>
    <string name="txt_btn_remove">remove</string>
    <string-array name="pic_type">
        <item>All</item>
        <item>Alarm</item>
        <item>Detection</item>
        <item>Normal</item>
        <item>Remote control</item>
        <item>Key</item>
        <item>Time delay shot</item>
        <item>Continuous shooting</item>
    </string-array>
    <string name="error_ap_disconnect">deivce connect failed!</string>
    <string name="txt_btn_play">play</string>
    <string name="txt_btn_stop">stop</string>
    <string name="txt_btn_capture">capture</string>
    <string name="txt_btn_full_screen">full screen</string>
    <string-array name="record_type">
        <item>All</item>
        <item>Alarm</item>
        <item>Detection</item>
        <item>Normal</item>
        <item>Manual</item>
        <item>Remote</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_test">view test</string>
    <string name="action_edit_photo">Edit</string>
    <string name="txt_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_camera_settings">CameraSettings</string>
    <string name="pref_title_camera_flash">Flash</string>
    <string name="pref_default_camera_flash">auto</string>
    <string-array name="pref_list_label_camera_flash">
        <item>Flash Auto</item>
        <item>Flash On</item>
        <item>Flash Off</item>
    </string-array>
    <string-array name="pref_list_value_camera_flash">
        <item>auto</item>
        <item>on</item>
        <item>off</item>
    </string-array>
    <string name="pref_title_camera_grid_line">Grid Line</string>
    <string name="pref_default_camera_grid_line">false</string>
    <string-array name="pref_list_label_camera_grid_line">
        <item>Grid On</item>
        <item>Grid Off</item>
    </string-array>
    <string-array name="pref_list_value_camera_grid_line">
        <item>true</item>
        <item>false</item>
    </string-array>
    <string name="pref_title_camera_wb">Withe balance</string>
    <string name="pref_default_camera_wb">0</string>
    <string-array name="pref_list_label_camera_wb">
        <item>Auto</item>
        <item>Cloudy</item>
        <item>Incandescent</item>
        <item>Iridescent</item>
        <item>Sunny</item>
    </string-array>
    <string-array name="pref_list_value_camera_wb">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="pref_title_camera_exposure">Exposure</string>
    <string name="pref_default_camera_exposure">0</string>
    <string-array name="pref_list_label_camera_exposure">
        <item>-2</item>
        <item>-1</item>
        <item>0</item>
        <item>+1</item>
        <item>-1</item>
    </string-array>
    <string name="gallery_app_name">Gallery</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="set_image">Set picture as</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="share_panorama">Share panorama</string>
    <string name="share_as_photo">Share as photo</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="details">Details</string>
    <string name="close">Close</string>
    <string name="show_on_map">Show on map</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="edit">Edit</string>
    <string name="crop_action">Crop</string>
    <string name="trim_action">Trim</string>
    <string name="set_as">Set as</string>
    <string name="video_err">Can\'t play video.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="path">Path</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="orientation">Orientation</string>
    <string name="duration">Duration</string>
    <string name="mimetype">MIME type</string>
</resources>