<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/m_action_take_photo"
        android:icon="@drawable/ic_camera_24dp"
        android:title="@string/action_take_photo"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/m_action_compare_split"
        android:icon="@drawable/ic_compare_split_24dp"
        android:title="@string/action_compare_split" />
    <item
        android:id="@+id/m_action_compare_stackup"
        android:icon="@drawable/ic_compare_stack_up_24dp"
        android:title="@string/action_compare_stackup" />
    <item
        android:id="@+id/m_action_edit_photo"
        android:icon="@drawable/ic_edit_24dp"
        android:title="@string/action_edit" />
    <item
        android:id="@+id/m_action_delete_photo"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/action_delete" />
    <item
        android:id="@+id/m_action_export_case_photo"
        android:icon="@drawable/ic_export_24dp"
        android:title="@string/action_export" />
</menu>