<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context="com.uc.caseview.MainActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:columnCount="2"
        android:rowCount="2"
        android:touchscreenBlocksFocus="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/action_case"
                android:layout_width="@dimen/action_size"
                android:layout_height="@dimen/action_size"
                android:background="@drawable/selector_item_bg"
                android:contentDescription="@string/dummy_content"
                android:scaleType="fitCenter"
                android:tint="@color/colorPrimaryDark"
                app:srcCompat="@drawable/main_action_case_list_48dp" />

            <TextView
                android:id="@+id/action_name_case"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_name_case"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/action_search"
                android:layout_width="@dimen/action_size"
                android:layout_height="@dimen/action_size"
                android:background="@drawable/selector_item_bg"
                android:contentDescription="@string/dummy_content"
                android:scaleType="fitCenter"
                android:tint="@color/colorPrimaryDark"
                app:srcCompat="@drawable/main_action_search_48dp" />

            <TextView
                android:id="@+id/action_name_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_name_search"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/action_settings"
                android:layout_width="@dimen/action_size"
                android:layout_height="@dimen/action_size"
                android:background="@drawable/selector_item_bg"
                android:contentDescription="@string/dummy_content"
                android:scaleType="fitCenter"
                android:tint="@color/colorPrimaryDark"
                app:srcCompat="@drawable/main_action_settings_48dp" />

            <TextView
                android:id="@+id/action_name_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_name_settings"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/action_gallery"
                android:layout_width="@dimen/action_size"
                android:layout_height="@dimen/action_size"
                android:background="@drawable/selector_item_bg"
                android:contentDescription="@string/dummy_content"
                android:scaleType="fitCenter"
                android:tint="@color/colorPrimaryDark"
                app:srcCompat="@drawable/main_action_gallery_48dp" />

            <TextView
                android:id="@+id/action_name_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_name_gallery"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>

    </GridLayout>

    <TextView
        android:id="@+id/company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/copy_right"
        android:layout_centerHorizontal="true"
        android:text="@string/company_name" />

    <TextView
        android:id="@+id/copy_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:text="@string/copyright" />

</RelativeLayout>
